<resources>
    <string name="app_name">Cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="telefone">Telefone:</string>
    <string name="insira_seu_telefone">Insira seu telefone</string>
    <string name="email">Email:</string>
    <string name="insira_seu_email">Insira seu email</string>
    <string name="ingressar_na_lista_de_emails">Ingressar na lista de emails?</string>
    <string name="genero">Gênero:</string>
    <string name="homem">Homem</string>
    <string name="mulher">Mulher</string>
    <string name="n_o_bin_rio">Não-binário</string>
    <string name="outro">Outro</string>
    <string name="cidade">Cidade:</string>
    <string name="insira_sua_cidade">Insira sua cidade</string>
    <string name="unidade">UF:</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
</resources>